{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 19,
  "lineage": "a5c8bf46-854c-3d30-eb65-992449154a70",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ws-eip-forNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e88b517007b4988",
            "arn": "arn:aws:ec2:us-east-1:339713112256:elastic-ip/eipalloc-00e88b517007b4988",
            "association_id": "eipassoc-053c65b0f18764555",
            "domain": "vpc",
            "id": "eipalloc-00e88b517007b4988",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ce0d7838cea0e19",
            "private_dns": "ip-172-168-1-12.ec2.internal",
            "private_ip": "172.168.1.12",
            "public_dns": "ec2-44-206-149-54.compute-1.amazonaws.com",
            "public_ip": "44.206.149.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "UAT-vpc-nat-gw-eip"
            },
            "tags_all": {
              "Name": "UAT-vpc-nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workspace_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:339713112256:instance/i-0d62304ccbb6cfa0f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d62304ccbb6cfa0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0180382e5e4244dc3",
            "private_dns": "ip-172-168-1-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09bcaf74149003405",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0892f9f0473b2cf6f",
            "tags": {
              "Name": "UAT-vpc-instance"
            },
            "tags_all": {
              "Name": "UAT-vpc-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02be56078b5c0eae1"
            ]
          },
          "dependencies": [
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:internet-gateway/igw-0eff5e508ef48f45a",
            "id": "igw-0eff5e508ef48f45a",
            "owner_id": "339713112256",
            "tags": {
              "Name": "UAT-vpc-igw"
            },
            "tags_all": {
              "Name": "UAT-vpc-igw"
            },
            "vpc_id": "vpc-000f946f53006e773"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ws-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e88b517007b4988",
            "association_id": "eipassoc-053c65b0f18764555",
            "connectivity_type": "public",
            "id": "nat-084ac978a36f6a919",
            "network_interface_id": "eni-01ce0d7838cea0e19",
            "private_ip": "172.168.1.12",
            "public_ip": "44.206.149.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0892f9f0473b2cf6f",
            "tags": {
              "Name": "UAT-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "UAT-vpc-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:route-table/rtb-03d0327e82f0ae7a1",
            "id": "rtb-03d0327e82f0ae7a1",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eff5e508ef48f45a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.168.1.0/26",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ac978a36f6a919",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UAT-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "UAT-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f946f53006e773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ws-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:route-table/rtb-0316bec8d944ee5d4",
            "id": "rtb-0316bec8d944ee5d4",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ac978a36f6a919",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UAT-vpc-pri-rt"
            },
            "tags_all": {
              "Name": "UAT-vpc-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f946f53006e773"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_nat_gateway.ws-NAT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ec5cdfff978cc72",
            "route_table_id": "rtb-0316bec8d944ee5d4",
            "subnet_id": "subnet-06743eca5751e8080"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-private-rt",
            "aws_subnet.ws-subnet-private",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a015d011fc7303b",
            "route_table_id": "rtb-03d0327e82f0ae7a1",
            "subnet_id": "subnet-0892f9f0473b2cf6f"
          },
          "dependencies": [
            "aws_eip.ws-eip-forNAT",
            "aws_internet_gateway.ws-igw",
            "aws_nat_gateway.ws-NAT",
            "aws_route_table.ws-Public-RT",
            "aws_subnet.ws-subnet-pub",
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ws-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:subnet/subnet-06743eca5751e8080",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06743eca5751e8080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-vpc-private-sub"
            },
            "tags_all": {
              "Name": "UAT-vpc-private-sub"
            },
            "vpc_id": "vpc-000f946f53006e773"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ws-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:subnet/subnet-0892f9f0473b2cf6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0892f9f0473b2cf6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "UAT-vpc-pub-sub"
            },
            "tags_all": {
              "Name": "UAT-vpc-pub-sub"
            },
            "vpc_id": "vpc-000f946f53006e773"
          },
          "dependencies": [
            "aws_vpc.ws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713112256:vpc/vpc-000f946f53006e773",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-06803c578161f85c3",
            "default_route_table_id": "rtb-0f31e01f662c589dd",
            "default_security_group_id": "sg-02be56078b5c0eae1",
            "dhcp_options_id": "dopt-02865b418d447b624",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000f946f53006e773",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f31e01f662c589dd",
            "owner_id": "339713112256",
            "tags": {
              "name": "UAT-vpc"
            },
            "tags_all": {
              "name": "UAT-vpc"
            }
          }
        }
      ]
    }
  ]
}